--- a/GestionScolarite/.env
+++ b/GestionScolarite/.env
@@ -1,5 +1,5 @@
-dialect=mysql
-server=127.0.0.1
+dialect=sqlserver
+server=DESKTOP-1JN3PDV
 dbname=framework
-username=root
-password=root
+username=framework
+password=framework
