--- a/GestionScolarite/GestionScolarite.csproj
+++ b/GestionScolarite/GestionScolarite.csproj
@@ -12,52 +12,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <COMReference Include="ACTIVEXLib">
-      <WrapperTool>tlbimp</WrapperTool>
-      <VersionMinor>0</VersionMinor>
-      <VersionMajor>1</VersionMajor>
-      <Guid>012f24c1-35b0-11d0-bf2d-0000e8d0d146</Guid>
-      <Lcid>0</Lcid>
-      <Isolated>false</Isolated>
-      <EmbedInteropTypes>true</EmbedInteropTypes>
-    </COMReference>
-    <COMReference Include="Microsoft.Office.Interop.MSProject">
-      <WrapperTool>tlbimp</WrapperTool>
-      <VersionMinor>9</VersionMinor>
-      <VersionMajor>4</VersionMajor>
-      <Guid>a7107640-94df-1068-855e-00dd01075445</Guid>
-      <Lcid>0</Lcid>
-      <Isolated>false</Isolated>
-      <EmbedInteropTypes>true</EmbedInteropTypes>
-    </COMReference>
-    <COMReference Include="Microsoft.Office.Core">
-      <WrapperTool>tlbimp</WrapperTool>
-      <VersionMinor>8</VersionMinor>
-      <VersionMajor>2</VersionMajor>
-      <Guid>2df8d04c-5bfa-101b-bde5-00aa0044de52</Guid>
-      <Lcid>0</Lcid>
-      <Isolated>false</Isolated>
-      <EmbedInteropTypes>true</EmbedInteropTypes>
-    </COMReference>
-    <COMReference Include="Microsoft.Office.Interop.Access.Dao">
-      <WrapperTool>tlbimp</WrapperTool>
-      <VersionMinor>0</VersionMinor>
-      <VersionMajor>12</VersionMajor>
-      <Guid>4ac9e1da-5bad-4ac7-86e3-24f4cdceca28</Guid>
-      <Lcid>0</Lcid>
-      <Isolated>false</Isolated>
-      <EmbedInteropTypes>true</EmbedInteropTypes>
-    </COMReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\model\DB.csproj" />
     <ProjectReference Include="..\TP8\Models.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Microsoft.Office.Interop.Excel">
-      <HintPath>..\..\..\..\..\..\..\Users\7\Desktop\microsoft.office.interop.excel\Microsoft.Office.Interop.Excel.dll</HintPath>
+    <Reference Include="DB">
+      <HintPath>..\..\..\DB.dll</HintPath>
     </Reference>
   </ItemGroup>
 
